<resources>
    <string name="app_name">Verifier</string>
    <string name="noob">TheN00bBeeFive</string>
    <string name="generate_qr">Generate QR</string>
    <string name="generated_qr">Generated QR</string>
    <string name="choose_zip">Choose zip</string>
    <string name="enter_passcode">Enter passcode</string>
    <string name="unzip">Unzip</string>
    <string name="enter_sharecode_to_generate_qr">Enter Sharecode to Generate QR</string>
    <string name="passcode">Passcode</string>
    <string name="done">DONE</string>
    <string name="your_qr_code_will_be_displayed_here">Your QR Code will be displayed here</string>
    <string name="scan_a_qr_code">Scan a QR Code</string>
    <string name="name">Name:</string>
    <string name="the_contents_of_the_qr_code_will_be_displayed_here">Contents of the QR Code</string>
    <string name="dob">DOB:</string>
    <string name="gender">Gender:</string>
    <string name="district">District:</string>
    <string name="state">State:</string>
    <string name="country">Country:</string>
    <string name="house_no">House No.:</string>
    <string name="street">Street:</string>
    <string name="post_office">Post Office:</string>
    <string name="pincode">PinCode:</string>
</resources>